# eurydice

./: .gitignore  .readthedocs.yaml  CV.py  CV_skeleton.py  GPR CV.py  LICENSE  README.md  kepler.py  plot.py  pyproject.toml
cv_skeleton/: CV.py  kepler.py  plot.py
docs/: CV.rst  api.rst  conf.py  index.rst  installation.rst  kepler.rst  kernel.rst  plot.rst  requirements.txt  tutorial.rst
eurydice/: CV.py  kernel.py  plot.py
example_package_kaybarr4/: CV.py
tests/: test_CrossValidation.py  test_kepler.py
